--- a/Copy_of_humanrecog_keras.ipynb
+++ b/Copy_of_humanrecog_keras.ipynb
@@ -493,8 +493,6 @@
       },
       "cell_type": "code",
       "source": [
-        "# Pooja look here - https://github.com/poojab5/keras/blob/master/keras/regularizers.py - line 110 - p is not defined. make it defined globaly\n",
-        "# https://github.com/avinashkd44/keras/blob/master/keras/regularizers.py   - mine\n",
         "\n",
         "\n",
         "# building a classifier model on top of the convolutional model:\n",
@@ -663,7 +661,7 @@
             "Instructions for updating:\n",
             "Use tf.cast instead.\n",
             "Epoch 1/80\n",
-            " 15/700 [..............................] - ETA: 14:33:40 - loss: 14.7237 - mean_squared_logarithmic_error: 0.0437 - acc: 0.0125"
+            " 25/700 [>.............................] - ETA: 14:12:31 - loss: 14.6787 - mean_squared_logarithmic_error: 0.0436 - acc: 0.0138"
           ],
           "name": "stdout"
         }
